--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -10,7 +10,7 @@
 }
 
 .sidebar__logo {
-  height: 150px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,9 +18,34 @@
   font-weight: bold;
   font-size: 35px;
 }
+.sidebar__logo > h3 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 2px;
+
+  color: #109cf1;
+}
+.sidebar__profile {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.sidebar__profile > img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.sidebar__profile-detail {
+  display: flex;
+  flex-direction: column;
+}
 
 .sidebar__logo > img {
-  height: 45px;
+  height: 70px;
 }
 
 .sidebar__item {
