--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -34,7 +34,7 @@
   --main-color-orange: #d68102;
   --second-color-orange: #fca11a;
 
-  --sidebar-width: 265px;
+  --sidebar-width: 245px;
   --border-radius: 15px;
   --topnav-height: 70px;
   --transition-cubic: cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -92,10 +92,11 @@ input:-webkit-autofill:active {
 }
 
 .card {
-  padding: 20px;
-  background-color: var(--main-bg);
-  box-shadow: var(--box-shadow);
-  border-radius: var(--border-radius);
+  padding: 15px;
+  background: #ffffff;
+  /* card shadow */
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
 }
 
 .full-height {
@@ -165,6 +166,54 @@ table {
 
   border-spacing: 0;
 }
+#my-table {
+  width: 100%;
+  max-height: 350px;
+
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  border-spacing: 0;
+}
+#my-table th:first-child {
+  border-top-left-radius: 10px;
+}
+#my th:last-child {
+  border-top-right-radius: 10px;
+}
+#my-table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px;
+}
+#my-table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+#my-table th,
+#my-table td {
+  border-bottom: 1px solid #ddd;
+  padding: 10px;
+  user-select: none;
+}
+#my-table tbody {
+  background-color: #fff;
+}
+#my-table tr td {
+  cursor: pointer;
+}
+#my-table tr:nth-child(even) {
+  background-color: #e1ecfd;
+}
+
+#my-table tr:hover {
+  background-color: rgb(3, 169, 244);
+}
+
+#my-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(3, 169, 244);
+  color: white;
+  border: 1px solid rgb(3, 169, 244);
+}
 @media screen {
   .title-print {
     display: none;
@@ -174,4 +223,11 @@ table {
   .hide-on-print {
     display: none;
   }
+}
+.btn_hide {
+  color: #90a0b7;
+  cursor: pointer;
+}
+.my-row {
+  display: flex;
 }
